--- a/Calendar/appsettings.json
+++ b/Calendar/appsettings.json
@@ -4,10 +4,12 @@
   },
   "Authentication": {
     "Google": {
-    }
+  "ClientId": "",
+  "ClientSecret": ""
+}
   },
   "GoogleCalendar": {
-    "ApiKey": "AIzaSyBK-kwaAuH6qrcnk7_-wMKIxNVJDDiy6i8",
+    "ApiKey": "",
     "GoogleCountry": "en.swedish.official%23holiday%40group.v.calendar.google.com",
     "GoogleEndpoint": "https://content.googleapis.com/calendar/v3/calendars/"
   },
